--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -11,6 +11,7 @@
   padding: 10px;
   border-radius: 10px;
   display: inline-block;
+  box-sizing: border-box;
 }
 
 .board-row {
@@ -53,6 +54,7 @@
     padding: 6px;
     max-width: 100vw;
     overflow: hidden;
+    box-sizing: border-box;
   }
   .status {
     font-size: 18px;
@@ -72,6 +74,7 @@
     padding: 4px;
     max-width: 100vw;
     overflow: hidden;
+    box-sizing: border-box;
   }
   .status {
     font-size: 16px;
